--- a/Pi.html
+++ b/Pi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Optimized Leibniz Pi Calculator</title>
+<title>Pi Calculator</title>
 <style>
 body {
   font-family: monospace;
@@ -48,7 +48,7 @@ button:disabled {
 </style>
 </head>
 <body>
-  <h1>Optimized Leibniz Pi Calculator</h1>
+  <h1>Pi Calculator</h1>
 
   <div id="controls">
     <button id="start">Start Calculating Pi</button>
